# churn-ml

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.py
data/processed/: data_clean.csv
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/1/4f962d3a0cfa4c05adaff0f1eec3f265/artifacts/: feature_importance.json
mlruns/1/models/m-47aff6dd768e4487951da553be4eac77/artifacts/: MLmodel  conda.yaml  model.ubj  python_env.yaml
mlruns/2/5ebb67f84fae4c2697a98b9295a41283/artifacts/: feature_importance.json
mlruns/2/models/m-11159fb2ff8d4268a22281ddc0ee732f/artifacts/: MLmodel  model.ubj  requirements.txt
models/: best_model.pkl  best_model_xgboost.pkl  metadata.json  metadata_lightgbm.json  metadata_random_forest.json  metadata_xgboost.json
notebooks/: EDA.ipynb  model.ipynb
src/data/: clean_data.py  validate_data.py
src/features/: build_features.py
src/models/: train_model.py
