[project]
name = "churn-ml"
version = "0.1.0"
description = "Churn prediction project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "kaggle>=1.6",
    "jupyter>=1.0",
]